chore: normalize spacing in BLM markup (#3234)

--- a/layouts/black-lives-matter.hbs
+++ b/layouts/black-lives-matter.hbs
@@ -220,7 +220,6 @@
       <li>Willie McCoy</li>
       <li>Yassin Mohamed</li>
       <li>&hellip;<a href="https://mappingpoliceviolence.org/unarmed">and</a> <a href="https://mappingpoliceviolence.org/unarmed2014">countless</a> <a href="https://apps.npr.org/documents/document.html?id=6933593-NPR-CodeSwitch-Saytheirnameslistv3">more</a> <a href="https://ebwiki.org/">lives</a> not listed here, taken by violence and brutality.</li>
-
     </ul>
     <p>
       White supremacy and police brutality are global problems. Every Black life
@@ -244,7 +243,6 @@
   </section>
 
   <section id="our-support">
-
     <p>
       It would be wrong for us to ignore the unearned privilege that exists in
       Node.js. Much of the project leadership is white, and a majority are men.
@@ -253,7 +251,6 @@
       project's leadership to date, but we can change how we build it moving
       forward.
     </p>
-
     <p>
       We are dedicated to being a part of the solution. We will actively center
       the Black community and uplift Black voices. We will share projects
@@ -263,64 +260,64 @@
       invite you to share ways that we can do better. Email <a href="mailto:blacklivesmatter@nodejs.org">blacklivesmatter@nodejs.org</a>
       or reach out to any of our project leaders.
     </p>
-
     <p>
       The responsibility to dismantle white supremacy does not fall on the Black
       community. It falls on the rest of us.
     </p>
-
     <p>
       To Black folks looking for access or collaboration: We're here for you.
     </p>
-
     <p>
       To Black people looking for  amplification or mentorship: We're here for
       you.
     </p>
-
     <p>
       To Black members of our community seeking guidance or any sort of support:
       We're here for you.
     </p>
-
- <p>
-   We will mentor any Black community member who wishes to contribute to
-   Node.js. Please contact us a
-   <a href="mailto:blacklivesmatter@nodejs.org">blacklivesmatter@nodejs.org</a>
-   or <a href="https://twitter.com/nodejs">@nodejs</a> on Twitter. This effort
-   will begin during or before our Collaborator Summit later this month. We will
-   post more information soon.
-  </p>
-
+    <p>
+      We will mentor any Black community member who wishes to contribute to
+      Node.js. Please contact us a
+      <a href="mailto:blacklivesmatter@nodejs.org">blacklivesmatter@nodejs.org</a>
+      or <a href="https://twitter.com/nodejs">@nodejs</a> on Twitter. This effort
+      will begin during or before our Collaborator Summit later this month. We will
+      post more information soon.
+    </p>
   </section>
 
   <section id="we-are-here-for-you">
-      <p>
-        Please feel welcome to contact
-        <a href="https://github.com/nodejs/node#tsc-technical-steering-committee">Technical Steering Committee</a>
-        and <a href="https://github.com/nodejs/community-committee#community-committee-members">Community Committee</a>
-        members. The preceding links contain email addresses for all members. If
-        you prefer, you can contact any of the following members on Twitter:
-      </p>
-      <ul>
-        <li><a href='https://twitter.com/codeekage'>Abraham Jr. Agiri</a></li>
-        <li><a href='https://twitter.com/obensource'>Ben Michel</a></li>
-        <li><a href='https://twitter.com/jasnell'>James M Snell</a></li>
-        <li><a href='https://twitter.com/joe_sepi'>Joe Sepi</a></li>
-        <li><a href='https://twitter.com/mmarkini'>Matheus Marchini</a></li>
-        <li><a href='https://twitter.com/MylesBorins'>Myles Borins</a></li>
-        <li><a href='https://twitter.com/codebytere'>Shelley Vohr</a></li>
-        <li><a href='https://twitter.com/bitandbang'>Tierney Cyren</a></li>
-        <li><a href='https://twitter.com/Trott'>Rich Trott</a></li>
-      </ul>
+    <p>
+      Please feel welcome to contact
+      <a href="https://github.com/nodejs/node#tsc-technical-steering-committee">Technical Steering Committee</a>
+      and <a href="https://github.com/nodejs/community-committee#community-committee-members">Community Committee</a>
+      members. The preceding links contain email addresses for all members. If
+      you prefer, you can contact any of the following members on Twitter:
+    </p>
+    <ul>
+      <li><a href='https://twitter.com/codeekage'>Abraham Jr. Agiri</a></li>
+      <li><a href='https://twitter.com/obensource'>Ben Michel</a></li>
+      <li><a href='https://twitter.com/jasnell'>James M Snell</a></li>
+      <li><a href='https://twitter.com/joe_sepi'>Joe Sepi</a></li>
+      <li><a href='https://twitter.com/mmarkini'>Matheus Marchini</a></li>
+      <li><a href='https://twitter.com/MylesBorins'>Myles Borins</a></li>
+      <li><a href='https://twitter.com/codebytere'>Shelley Vohr</a></li>
+      <li><a href='https://twitter.com/bitandbang'>Tierney Cyren</a></li>
+      <li><a href='https://twitter.com/Trott'>Rich Trott</a></li>
+    </ul>
   </section>
 
   <section id="temporary">
-    <p>If you're looking for docs, see
-    <a href="https://nodejs.org/en/docs/">https://nodejs.org/en/docs/</a>.</p>
-    <p>To download Node.js, see <a href="https://nodejs.org/en/download/">https://nodejs.org/en/download/</a>.</p>
-    <p>For information on the recent security release, see
-    <a href="https://nodejs.org/en/blog/vulnerability/june-2020-security-releases/">the security release blog post</a>.</p>
+    <p>
+      If you're looking for docs, see
+      <a href="https://nodejs.org/en/docs/">https://nodejs.org/en/docs/</a>.
+    </p>
+    <p>
+      To download Node.js, see <a href="https://nodejs.org/en/download/">https://nodejs.org/en/download/</a>.
+    </p>
+    <p>
+      For information on the recent security release, see
+      <a href="https://nodejs.org/en/blog/vulnerability/june-2020-security-releases/">the security release blog post</a>.
+    </p>
   </section>
 
   <footer>
