chore: improve wording of offers for collaboration (#3236)
Remove "mentor" and other words that suggest that "we" have the
competence and the Black folks reaching out to us need our "support".

Refs: https://twitter.com/TatianaTMac/status/1269303111354470400
Refs: https://twitter.com/NotNikyatu/status/1268661305843552263

--- a/layouts/black-lives-matter.hbs
+++ b/layouts/black-lives-matter.hbs
@@ -265,19 +265,18 @@
       community. It falls on the rest of us.
     </p>
     <p>
-      To Black folks looking for access or collaboration: We're here for you.
+      To Black folks looking for access: We're here for you.
     </p>
     <p>
-      To Black people looking for  amplification or mentorship: We're here for
+      To Black people looking for amplification: We're here for you.
+    </p>
+    <p>
+      To Black members of our community seeking collaboration: We're here for
       you.
     </p>
     <p>
-      To Black members of our community seeking guidance or any sort of support:
-      We're here for you.
-    </p>
-    <p>
-      We will mentor any Black community member who wishes to contribute to
-      Node.js. Please contact us a
+      We will work with any Black community member who wishes to contribute to
+      Node.js. Please contact us at
       <a href="mailto:blacklivesmatter@nodejs.org">blacklivesmatter@nodejs.org</a>
       or <a href="https://twitter.com/nodejs">@nodejs</a> on Twitter. This effort
       will begin during or before our Collaborator Summit later this month. We will
