blm: first step towards intl (#3219)

--- a/layouts/black-lives-matter.hbs
+++ b/layouts/black-lives-matter.hbs
@@ -1,330 +1,9 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-  <meta charset="utf-8">
-  <title>#BlackLivesMatter</title>
-
-  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-  <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-  <link rel="dns-prefetch" href="https://api.github.com">
-
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&amp;display=fallback">
-  <link rel="stylesheet" href="https://nodejs.org/static/css/styles.css">
-
-  <meta name="author" content="Node.js">
-  <meta name="robots" content="index, follow">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="#BlackLivesMatter">
-
-  <link rel="apple-touch-icon" href="https://nodejs.org/static/images/favicons/apple-touch-icon.png" sizes="180x180">
-  <link rel="icon" href="https://nodejs.org/static/images/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="https://nodejs.org/static/images/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-  <link rel="manifest" href="https://nodejs.org/static/images/favicons/manifest.json">
-  <link rel="mask-icon" href="https://nodejs.org/static/images/favicons/safari-pinned-tab.svg" color="#43853d">
-  <link rel="shortcut icon" href="https://nodejs.org/static/images/favicons/favicon.ico">
-  <meta name="msapplication-TileColor" content="#333333">
-  <meta name="msapplication-config" content="https://nodejs.org/static/images/favicons/browserconfig.xml">
-  <meta name="theme-color" content="#333333">
-
-  <meta property="og:site_name" content="Node.js">
-  <meta property="og:title" content="#BlackLivesMatter">
-  <meta property="og:image" content="https://nodejs.org/static/images/logo-hexagon-card.png">
-  <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="224">
-  <meta property="og:image:height" content="256">
-  <meta property="og:description" content="#BlackLivesMatter">
-
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:site" content="@nodejs">
-  <meta name="twitter:title" content="#BlackLivesMatter">
-  <meta name="twitter:image" content="https://nodejs.org/static/images/logo-hexagon-card.png">
-  <meta name="twitter:image:alt" content="The Node.js Hexagon Logo">
-  <style>
-    body {
-      background: #333;
-      color: #fff;
-      font-family: system-ui, sans-serif;
-    }
-
-    section {
-      padding: 2rem;
-      max-width: 50ch;
-      margin: 0 auto;
-    }
-
-    .humans {
-      padding: 0;
-    }
-
-    ul.humans > li {
-      list-style: none;
-      font-size: 1.7rem;
-      text-align: center;
-    }
-
-    h1 {
-      font-size: 5rem;
-      line-height: 0.8;
-      font-weight: lighter;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding-left: 1rem;
-      padding-right: 1rem;
-    }
-
-    h1 > span:first-child::before {
-      content: '#';
-    }
-
-    .center {
-      margin: 0 auto
-    }
-
-    .space {
-      padding-top: 4rem;
-      padding-bottom: 2rem;
-    }
-
-    section#we-are-here-for-you > ul > li {
-      display: inline;
-    }
-
-    section#we-are-here-for-you > ul > li:not(:last-child)::after {
-      content: ', '
-    }
-
-    footer {
-      margin-bottom: 2rem;
-    }
-
-    @media (max-width: 640px) {
-      h1 {
-        flex-direction: column;
-        place-content: center;
-      }
-
-      h1 > span:first-child::before {
-        position: absolute;
-        transform: translateX(-110%);
-      }
-
-      section {
-        margin: 0;
-      }
-    }
-
-    @media not all and (min-resolution: 0.001dpcm) {
-      @supports (-webkit-appearance: none) and (-webkit-text-stroke-color: transparent) {
-        h1 {
-          flex-wrap: nowrap;
-          align-items: center;
-        }
-      }
-    }
-  </style>
-</head>
-
+<html lang="{{site.locale}}"{{#if site.rtl}} dir="rtl"{{/if}}>
+{{> blm-html-head }}
 <body>
-  <h1 class="space">
-    <span>Black</span>
-    <span>Lives</span>
-    <span>Matter</span>
-  </h1>
-  <section id="lives">
-    <ul class="humans">
-      <li>Ahmaud Arbery</li>
-      <li>Akai Gurley</li>
-      <li>Akiel Denkins</li>
-      <li>Alfred Olango</li>
-      <li>Alton Sterling</li>
-      <li>Anthony Hill</li>
-      <li>Anthony Lamar Smith</li>
-      <li>Antwon Rose II</li>
-      <li>Ariane McCree</li>
-      <li>Botham Jean</li>
-      <li>Brandon Webber</li>
-      <li>Brendon Glenn</li>
-      <li>Breonna Taylor</li>
-      <li>Charly Keunang</li>
-      <li>Christian Taylor</li>
-      <li>Christopher Whitfield</li>
-      <li>Danny Ray Thomas</li>
-      <li>Dante Parker</li>
-      <li>Darius Tarver</li>
-      <li>DeAndre Ballard</li>
-      <li>DeJuan Guillory</li>
-      <li>Delrawn Small</li>
-      <li>De’Von Bailey</li>
-      <li>Dontre Hamilton</li>
-      <li>D’ettrick Griffin</li>
-      <li>Emantic Fitzgerald Bradford Jr</li>
-      <li>Eric Garner</li>
-      <li>Eric Logan</li>
-      <li>Ezell Ford</li>
-      <li>Finan H. Berhe</li>
-      <li>Freddie Gray</li>
-      <li>George Floyd</li>
-      <li>Gregory Gunn</li>
-      <li>Gregory Hill Jr</li>
-      <li>JaQuavion Slaton</li>
-      <li>Jamar Clark</li>
-      <li>Jamarion Robinson</li>
-      <li>Jamee Johnson</li>
-      <li>Jemel Roberson</li>
-      <li>Jerame Reid</li>
-      <li>Jimmy Atchison</li>
-      <li>John Crawford III</li>
-      <li>Jonathan Ferrell</li>
-      <li>Jonathan Hart</li>
-      <li>Jordan Baker</li>
-      <li>Jordan Edwards</li>
-      <li>Julius Johnson</li>
-      <li>Kajieme Powell</li>
-      <li>Keith Childress</li>
-      <li>Keith Lamont Scott</li>
-      <li>Kendrec McDade</li>
-      <li>Kwame Jones</li>
-      <li>Laquan McDonald</li>
-      <li>Larry Jackson Jr</li>
-      <li>Manuel Loggins Jr</li>
-      <li>Mario Woods</li>
-      <li>Maurice Granton</li>
-      <li>Michael Brown</li>
-      <li>Michael Dean</li>
-      <li>Mike Ramos</li>
-      <li>Miles Hall</li>
-      <li>Patrick Harmon</li>
-      <li>Philando Castile</li>
-      <li>Quintonio LeGrier</li>
-      <li>Ramarley Graham</li>
-      <li>Robert Lawrence White</li>
-      <li>Rumain Brisbon</li>
-      <li>Ryan Twyman</li>
-      <li>Samuel David Mallard</li>
-      <li>Samuel DuBose</li>
-      <li>Sandra Bland</li>
-      <li>Sean Reed</li>
-      <li>Stephon Clark</li>
-      <li>Steven Demarco Taylor</li>
-      <li>Tamir Rice</li>
-      <li>Terence Crutcher</li>
-      <li>Terrance Franklin</li>
-      <li>Terrence Sterling</li>
-      <li>Tony McDade</li>
-      <li>Tony Robinson</li>
-      <li>Trayvon Martin</li>
-      <li>Victor White III</li>
-      <li>Walter Scott</li>
-      <li>Wendell Allen</li>
-      <li>William Green</li>
-      <li>Willie McCoy</li>
-      <li>Yassin Mohamed</li>
-      <li>&hellip;<a href="https://mappingpoliceviolence.org/">and</a> <a href="https://twitter.com/samswey/status/1259254114606886913">countless</a> <a href="https://apps.npr.org/documents/document.html?id=6933593-NPR-CodeSwitch-Saytheirnameslistv3">more</a> <a href="https://ebwiki.org/">lives</a> not listed here, taken by violence and brutality.</li>
-    </ul>
-    <p>
-      White supremacy and police brutality are global problems. Every Black life
-      lost to police murder globally matters and mattered. The above list
-      contains the names of Black people murdered by police brutality in the
-      U.S. since 2009. This is because the U.S. is the origin of the Black Lives
-      Matter movement and currently the heart of the resistance.
-    </p>
-  </section>
-
-  <section>
-    <p>Where you can donate:</p>
-    <ul>
-      <li>Donate to the <a href="https://www.gofundme.com/f/georgefloyd">Official George Floyd Memorial Fund</a>.</li>
-      <li>Donate to the <a href="https://www.gofundme.com/f/i-run-with-maud">I Run With Maud</a> fundraiser for Ahmaud Arbery.</li>
-      <li>Donate to the <a href="https://www.gofundme.com/f/justice-for-mike-ramos">Justice for Mike Ramos</a> fundraiser.</li>
-      <li>Find and donate to bail funds via the <a href="https://www.communityjusticeexchange.org/nbfn-directory">National Bail Fund Network</a>.</li>
-      <li><a href="https://www.facebook.com/reclaimtheblock/">Reclaim the Block</a> has published a <a href="https://docs.google.com/document/d/1yLWGTQIe3967hdc9RSxBq5s6KKZHe-3_mWp5oemd7OA/preview?pru=AAABcpUiX3k*Y6Q4I6UBtkH3lLz9GVLg0A">Google Doc of organizations to donate to.</a></li>
-    </ul>
-    <p>We will update this list as appropriate.</p>
-  </section>
-
-  <section id="our-support">
-    <p>
-      It would be wrong for us to ignore the unearned privilege that exists in
-      Node.js. Much of the project leadership is white, and a majority are men.
-      We are and have been systematically complicit in perpetuating the issues
-      that led us to where we are. We can't change how we've built out the
-      project's leadership to date, but we can change how we build it moving
-      forward.
-    </p>
-    <p>
-      We are dedicated to being a part of the solution. We will actively center
-      the Black community and uplift Black voices. We will share projects
-      founded and built by Black community members. We will hold ourselves
-      accountable, fulfill our promises, and make changes as needed. While it is
-      our responsibility to hold ourselves accountable, we welcome your help. We
-      invite you to share ways that we can do better. Email <a href="mailto:blacklivesmatter@nodejs.org">blacklivesmatter@nodejs.org</a>
-      or reach out to any of our project leaders.
-    </p>
-    <p>
-      The responsibility to dismantle white supremacy does not fall on the Black
-      community. It falls on the rest of us.
-    </p>
-    <p>
-      To Black folks looking for access: We're here for you.
-    </p>
-    <p>
-      To Black people looking for amplification: We're here for you.
-    </p>
-    <p>
-      To Black members of our community seeking collaboration: We're here for
-      you.
-    </p>
-    <p>
-      We will work with any Black community member who wishes to contribute to
-      Node.js. Please contact us at
-      <a href="mailto:blacklivesmatter@nodejs.org">blacklivesmatter@nodejs.org</a>
-      or <a href="https://twitter.com/nodejs">@nodejs</a> on Twitter. This effort
-      will begin during or before our Collaborator Summit later this month. We will
-      post more information soon.
-    </p>
-  </section>
-
-  <section id="we-are-here-for-you">
-    <p>
-      Please feel welcome to contact
-      <a href="https://github.com/nodejs/node#tsc-technical-steering-committee">Technical Steering Committee</a>
-      and <a href="https://github.com/nodejs/community-committee#community-committee-members">Community Committee</a>
-      members. The preceding links contain email addresses for all members. If
-      you prefer, you can contact any of the following members on Twitter:
-    </p>
-    <ul>
-      <li><a href='https://twitter.com/codeekage'>Abraham Jr. Agiri</a></li>
-      <li><a href='https://twitter.com/obensource'>Ben Michel</a></li>
-      <li><a href='https://twitter.com/jasnell'>James M Snell</a></li>
-      <li><a href='https://twitter.com/joe_sepi'>Joe Sepi</a></li>
-      <li><a href='https://twitter.com/mmarkini'>Matheus Marchini</a></li>
-      <li><a href='https://twitter.com/MylesBorins'>Myles Borins</a></li>
-      <li><a href='https://twitter.com/codebytere'>Shelley Vohr</a></li>
-      <li><a href='https://twitter.com/bitandbang'>Tierney Cyren</a></li>
-      <li><a href='https://twitter.com/Trott'>Rich Trott</a></li>
-    </ul>
-  </section>
-
-  <section id="temporary">
-    <p>
-      If you're looking for docs, see
-      <a href="https://nodejs.org/en/docs/">https://nodejs.org/en/docs/</a>.
-    </p>
-    <p>
-      To download Node.js, see <a href="https://nodejs.org/en/download/">https://nodejs.org/en/download/</a>.
-    </p>
-    <p>
-      For information on the recent security release, see
-      <a href="https://nodejs.org/en/blog/vulnerability/june-2020-security-releases/">the security release blog post</a>.
-    </p>
-  </section>
-
-  <footer>
-    <div class="container">
-      <a href="/en/" id="logo">
-        <img src="https://nodejs.org/static/images/logo.svg" alt="Node.js" width="122" height="75">
-      </a>
-    </div>
-  </footer>
+  {{> blm-header }}
+  {{{ contents }}}
+  {{> blm-footer }}
 </body>
 </html>
