blm: convert to banner (#3246)
We originally discussed keeping the BLM landing page up for a week.
This is a suggested implementation for what we can replace it with.
It makes a new landing page /en/black-lives-matter/ that preserves
the entire original BLM landing site and adds a link to it using a
new banner.

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -12,6 +12,12 @@
 
         {{{ contents }}}
 
+        {{#if project.blacklivesmatter.visible}}
+          <p class="home-blacklivesmatter home-blacklivesmatter-banner">
+            <a href="{{ project.blacklivesmatter.link }}">{{ project.blacklivesmatter.text }}</a>
+          </p>
+        {{/if}}
+
         {{#if project.banner.visible}}
           <p class="home-version home-version-banner">
             <a href="{{ project.banner.link }}">{{ project.banner.text }}</a>
