--- a/layouts/css/page-modules/_home.scss
+++ b/layouts/css/page-modules/_home.scss
@@ -1,3 +1,26 @@
+.home-blacklivesmatter {
+  padding-top: 10px;
+  font-size: 16px;
+  color: $gray;
+}
+
+.home-blacklivesmatter-banner {
+  font-size: 130%;
+  background-color: $node-gray;
+  padding: 5px 15px;
+  border-radius: 2px;
+  margin-top: 1em;
+  a {
+    background-color: $black;
+    color: $white;
+    padding: .5em;
+    transition: padding .2s ease-in-out;
+    &:hover {
+      padding: .6em;
+    }
+  }
+}
+
 .home-version {
   padding-top: 10px;
   font-size: 16px;
