blm: increase link contrast (#3265)
Fixes: https://github.com/nodejs/nodejs.org/issues/3257

--- a/layouts/partials/blm-styles.hbs
+++ b/layouts/partials/blm-styles.hbs
@@ -4,6 +4,10 @@
     color: #fff;
     font-family: system-ui, sans-serif;
   }
+  
+  a, a:link {
+    color: #72ba55;
+  }
 
   p, ul {
     padding-left: 2rem;
