blm: convert to button
The commit improves the visual appeal of the BLM CTA.

Notes:
    https://user-images.githubusercontent.com/17770407/87524387-1cbf2f00-c656-11ea-8e94-7f80de3ed847.png
    https://user-images.githubusercontent.com/17770407/87524580-53954500-c656-11ea-8991-2935a8fcfdef.png

Refs: https://github.com/nodejs/nodejs.org/pull/3246

Post-Feedback: https://user-images.githubusercontent.com/17770407/92166219-3f73f580-ee06-11ea-893c-0017d5d00ad0.png

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -13,9 +13,9 @@
         {{{ contents }}}
 
         {{#if project.blacklivesmatter.visible}}
-          <p class="home-blacklivesmatter home-blacklivesmatter-banner">
-            <a href="{{ project.blacklivesmatter.link }}">{{ project.blacklivesmatter.text }}</a>
-          </p>
+          <div class="home-blacklivesmatterblock">
+            <a tabindex="0" role="button" aria-pressed="false" class="home-blacklivesmatterbutton" href="{{ project.blacklivesmatter.link }}">{{ project.blacklivesmatter.text }}</a>
+          </div>
         {{/if}}
 
         {{#if project.banner.visible}}
