--- a/layouts/partials/primary-download-matrix.hbs
+++ b/layouts/partials/primary-download-matrix.hbs
@@ -59,11 +59,12 @@
         <th>{{downloads.MacOSInstaller}} (.pkg)</th>
         <td colspan="2"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}.pkg">64-bit</a></td>
       </tr>
-
       <tr>
         <th>{{downloads.MacOSBinary}} (.tar.gz)</th>
-        <td colspan="2"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-darwin-x64.tar.gz">64-bit</a></td>
+        <td{{#unless versionTypeCurrent}} colspan="2"{{/unless}}><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-darwin-x64.tar.gz">64-bit</a></td>
+        {{#if versionTypeCurrent}}<td><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-darwin-arm64.tar.gz">ARM64</a></td>{{/if}}
       </tr>
+
       <tr>
         <th>{{downloads.LinuxBinaries}} (x64)</th>
         <td colspan="2"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}-linux-x64.tar.xz">64-bit</a></td>
