--- a/layouts/partials/primary-download-matrix.hbs
+++ b/layouts/partials/primary-download-matrix.hbs
@@ -57,7 +57,7 @@
 
       <tr>
         <th>{{downloads.MacOSInstaller}} (.pkg)</th>
-        <td colspan="2"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}.pkg">64-bit</a></td>
+        <td colspan="2"><a href="https://nodejs.org/dist/{{version.node}}/node-{{version.node}}.pkg">64-bit{{#if versionTypeCurrent}} / ARM64{{/if}}</a></td>
       </tr>
       <tr>
         <th>{{downloads.MacOSBinary}} (.tar.gz)</th>
