--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -12,15 +12,15 @@
 
         {{{ contents }}}
 
-        {{#if site.blacklivesmatter.visible}}
+        {{#if site.banners.blacklivesmatter.visible}}
           <div class="home-blacklivesmatterblock">
-            <a tabindex="0" role="button" aria-pressed="false" class="home-blacklivesmatterbutton" href="{{ site.blacklivesmatter.link }}">{{ site.blacklivesmatter.text }}</a>
+            <a tabindex="0" role="button" aria-pressed="false" class="home-blacklivesmatterbutton" href="{{ site.banners.blacklivesmatter.link }}">{{ site.banners.blacklivesmatter.text }}</a>
           </div>
         {{/if}}
 
-        {{#if site.banner.visible}}
+        {{#if site.banners.index.visible}}
           <p class="home-version home-version-banner">
-            <a href="{{ site.banner.link }}">{{ site.banner.text }}</a>
+            <a href="{{ site.banners.index.link }}">{{ site.banners.index.text }}</a>
           </p>
         {{/if}}
 
