remove the "Contributors" list and re-arrange the "Help" info (#4044)
1. Make "Help" Info in verticle in ul...li style.
2. remove the contributors' list, this will be discussed at (https://github.com/nodejs/nodejs.org/issues/4043).
3. Ref from "README.md" in "CONTRIBUTING.md", because for newbies, they should know how to step-by-step building the nodejs.org.
4. Considering the random contributor is related to node/node.dev (https://nodejs.dev/, at the footer) instead of node.org itself, so remove it here.

Ref: https://github.com/nodejs/nodejs.org/issues/4000
----
Co-authored-by: Rich Trott <rtrott@gmail.com>

--- a/layouts/css/page-modules/_jsfoundation.scss
+++ b/layouts/css/page-modules/_jsfoundation.scss
@@ -4,6 +4,8 @@
   color: $white;
   background: $node-gray;
   direction: ltr;
+  width: 60%;
+  float: left;
 
   p + p {
     margin-top: 0;
@@ -17,7 +19,7 @@
 }
 
 .issue-link {
-  text-align: right;
+  text-align: left;
   min-width: 330px;
   margin-left: auto;
 }
@@ -35,6 +37,14 @@
     border-radius: 50%;
     margin-right: 1em;
   }
+}
+
+.help {
+  margin-top: 3em;
+  width: 40%;
+  margin-left: 50em;
+  font-size: 14px;
+  color: $white;
 }
 
 @media screen and (max-width: 700px) {
