feat: make previous versions of Nodejs pagable (#4061)
Since we've now got a large table with latest versions of Nodejs, we don't need previous links but table instead.

What's more, in order to make people download the version quickly, the new feature is to offer you a quick but simple search for Nodejs's version, as well as npm version.

--- a/layouts/download-releases.hbs
+++ b/layouts/download-releases.hbs
@@ -14,10 +14,8 @@
           {{{ contents }}}
         </section>
 
-        <br>
-
         <section>
-          <table class="download-table full-width">
+          <table id="tbVersions" class="download-table full-width">
             <thead>
               <tr>
                 <td>Version</td>
@@ -61,5 +59,11 @@
   </main>
 
   {{> footer }}
+
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/fancyTable.min.js"></script>
+<script src="/static/js/previousVersion.js"></script>
+
 </body>
+
 </html>
