--- a/layouts/css/styles.scss
+++ b/layouts/css/styles.scss
@@ -9,6 +9,7 @@
 @import "layout/grid";
 @import "layout/main";
 @import "layout/lists";
+@import "layout/dark-theme";
 @import "page-modules/jsfoundation";
 @import "page-modules/header";
 @import "page-modules/footer";
