--- a/layouts/css/_variables.scss
+++ b/layouts/css/_variables.scss
@@ -15,6 +15,14 @@ $gray: #666;
 $node-gray: #333;
 $home-secondary-links-color: #51744e;
 
+// for dark-theme
+$dark-black: #090c15;
+$dark-black2: #141a2b;
+$dark-gray: #242424;
+$dark-green: #2c372a;
+$dark-green2: #84ba64;
+$dark-green3: #64de64;
+
 @mixin padded-link($padding) {
   padding-right: $padding;
   padding-left: $padding;
