add new translations for "Toggle Button" (#4158)
For dark mode's toggle button, add the translation for it.
Ref: #4139.

--- a/layouts/partials/header.hbs
+++ b/layouts/partials/header.hbs
@@ -23,7 +23,7 @@
       </ul>
     </nav>
 
-    <button class="dark-theme-switcher" type="button" title="Toggle dark/light mode" aria-label="Toggle dark/light mode"></button>
+    <button class="dark-theme-switcher" type="button" title="{{site.toggleText}}" aria-label="Toggle dark/light mode"></button>
 
     <button class="lang-picker-toggler" type="button" aria-controls="lang-picker" aria-expanded="false">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="25" height="25" aria-hidden="true" focusable="false" fill="currentColor">
