--- a/layouts/css/_variables.scss
+++ b/layouts/css/_variables.scss
@@ -17,11 +17,12 @@ $home-secondary-links-color: #51744e;
 
 // for dark-theme
 $dark-black: #090c15;
-$dark-black2: #141a2b;
+$dark-black2: #233056;
 $dark-gray: #242424;
 $dark-green: #2c372a;
 $dark-green2: #84ba64;
 $dark-green3: #64de64;
+$dark-code-background: #2c3437;
 
 @mixin padded-link($padding) {
   padding-right: $padding;
