Fix dark mode switcher flash bug (#4167) (#4174)
Ref: #4167

--- a/layouts/partials/html-head.hbs
+++ b/layouts/partials/html-head.hbs
@@ -34,4 +34,6 @@
   {{#each site.feeds}}
   <link rel="alternate" href="/{{ ../site.locale }}/{{ link }}" title="{{ text }}" type="application/rss+xml">
   {{/each}}
+
+  <script src="/static/js/themeSwitcher.js"></script>
 </head>
