--- a/layouts/css/_variables.scss
+++ b/layouts/css/_variables.scss
@@ -2,7 +2,7 @@ $body-max-width: 980px;
 
 $black: #000;
 $white: #fff;
-
+$white-alpha-b3: #ffffffb3;
 $node-green: #43853d;
 //$bright-green: #028a00;
 $light-green: #eaf5e9;
@@ -14,10 +14,14 @@ $light-gray: #999;
 $gray: #666;
 $node-gray: #333;
 $home-secondary-links-color: #51744e;
+$black-alpha-80: #00000080;
+$black-alpha-12: #00000012;
+$black-alpha-0f: #0000000f;
 
 // for dark-theme
 $dark-black: #090c15;
 $dark-black2: #233056;
+$dark-black3: #23305671;
 $dark-gray: #242424;
 $dark-green: #2c372a;
 $dark-green2: #84ba64;
