Revert "Re-style release schedule table in both light & dark mode (#4200)"
This reverts commit 8f6c17e4a6537e912b0e9b22f1a810da0a7fe29a.

--- a/layouts/css/layout/_dark-theme.scss
+++ b/layouts/css/layout/_dark-theme.scss
@@ -65,16 +65,12 @@
     }
 
     table {
-      background-color: $dark-black3;
       th {
-        color: $white-alpha-b3;
-      }
-      td {
         color: $white;
       }
-      tr:only-child,
-      tr:nth-child(even) {
+      tr:nth-child(odd) {
         background-color: $dark-black2 !important;
+        color: $light-gray3;
       }
     }
 
