--- a/layouts/css/layout/_dark-theme.scss
+++ b/layouts/css/layout/_dark-theme.scss
@@ -130,7 +130,7 @@
     }
     code {
       background-color: $dark-code-background;
-      color: $light-gray
+      color: $light-gray;
     }
   }
 }
