--- a/layouts/css/page-modules/_home.scss
+++ b/layouts/css/page-modules/_home.scss
@@ -129,19 +129,19 @@
  */
 
 [role="button"] {
-  border: 1px solid hsl(0, 0%, 39%);
+  border: 1px solid hsl(0deg, 0%, 39%);
   border-radius: 5px;
-  box-shadow: 0 1px 2px hsl(0, 0%, 45%);
+  box-shadow: 0 1px 2px hsl(0deg, 0%, 45%);
   color: #fff;
-  text-shadow: 0 -1px 1px hsl(0, 0%, 15%);
-  background-color: hsl(0, 0%, 31%);
-  background-image: linear-gradient(to bottom, hsl(0, 0%, 33%), hsl(0, 0%, 27%));
+  text-shadow: 0 -1px 1px hsl(0deg, 0%, 15%);
+  background-color: hsl(0deg, 0%, 31%);
+  background-image: linear-gradient(to bottom, hsl(0deg, 0%, 33%), hsl(0deg, 0%, 27%));
 }
 
 [role="button"]:hover {
-  border-color: hsl(0, 0%, 19%);
-  background-color: hsl(0, 0%, 21%);
-  background-image: linear-gradient(to bottom, hsl(0, 0%, 23%), hsl(0, 0%, 17%));
+  border-color: hsl(0deg, 0%, 19%);
+  background-color: hsl(0deg, 0%, 21%);
+  background-image: linear-gradient(to bottom, hsl(0deg, 0%, 23%), hsl(0deg, 0%, 17%));
   cursor: pointer;
 }
 
@@ -158,7 +158,7 @@
   right: calc(-1px - 3px - 3px);
   bottom: calc(-1px - 3px - 3px);
   left: calc(-1px - 3px - 3px);
-  border: 3px solid hsl(0, 0%, 39%);
+  border: 3px solid hsl(0deg, 0%, 39%);
 
   /* button border radius + outline width + offset */
   border-radius: calc(5px + 3px + 3px);
@@ -166,26 +166,26 @@
 }
 
 [role="button"]:active {
-  border-color: hsl(0, 0%, 29%);
-  background-color: hsl(0, 0%, 11%);
-  background-image: linear-gradient(to bottom, hsl(0, 0%, 33%), hsl(0, 0%, 27%));
-  box-shadow: inset 0 3px 5px 1px hsl(0, 0%, 10%);
+  border-color: hsl(0deg, 0%, 29%);
+  background-color: hsl(0deg, 0%, 11%);
+  background-image: linear-gradient(to bottom, hsl(0deg, 0%, 33%), hsl(0deg, 0%, 27%));
+  box-shadow: inset 0 3px 5px 1px hsl(0deg, 0%, 10%);
 }
 
 [role="button"][aria-pressed] {
-  border-color: hsl(0, 0%, 29%);
-  box-shadow: 0 1px 2px hsl(0, 0%, 35%);
-  text-shadow: 0 -1px 1px hsl(0, 0%, 5%);
-  background-color: hsl(0, 0%, 31%);
-  background-image: linear-gradient(to bottom, hsl(0, 0%, 33%), hsl(0, 0%, 27%));
+  border-color: hsl(0deg, 0%, 29%);
+  box-shadow: 0 1px 2px hsl(0deg, 0%, 35%);
+  text-shadow: 0 -1px 1px hsl(0deg, 0%, 5%);
+  background-color: hsl(0deg, 0%, 31%);
+  background-image: linear-gradient(to bottom, hsl(0deg, 0%, 33%), hsl(0deg, 0%, 27%));
 }
 
 [role="button"][aria-pressed]:hover {
-  border-color: hsl(0, 0%, 9%);
-  background-color: hsl(0, 0%, 31%);
-  background-image: linear-gradient(to bottom, hsl(0, 0%, 13%), hsl(0, 0%, 7%));
+  border-color: hsl(0deg, 0%, 9%);
+  background-color: hsl(0deg, 0%, 31%);
+  background-image: linear-gradient(to bottom, hsl(0deg, 0%, 13%), hsl(0deg, 0%, 7%));
 }
 
 [role="button"][aria-pressed]:focus::before {
-  border-color: hsl(0, 0%, 29%);
+  border-color: hsl(0deg, 0%, 29%);
 }
