auto detect ltr and rtl text

--- a/layouts/contribute.hbs
+++ b/layouts/contribute.hbs
@@ -10,7 +10,7 @@
 
       {{> navigation key='getinvolved'}}
 
-      <article>
+      <article dir="auto">
         {{{ contents }}}
       </article>
 
