--- a/layouts/docs.hbs
+++ b/layouts/docs.hbs
@@ -10,7 +10,7 @@
 
       {{> navigation key='docs'}}
 
-      <article>
+      <article dir="auto">
         {{{ contents }}}
 
         {{!> prev-next-navigation }}
