--- a/layouts/download-current.hbs
+++ b/layouts/download-current.hbs
@@ -7,7 +7,7 @@
 
   <main id="main">
     <div class="container">
-      <article>
+      <article dir="auto">
         <div class="download-header">
           <h1>{{downloads.headline}}</h1>
         </div>
