--- a/layouts/download-releases.hbs
+++ b/layouts/download-releases.hbs
@@ -7,7 +7,7 @@
 
   <main id="main">
     <div class="container">
-      <article>
+      <article dir="auto">
         <h1>{{title}}</h1>
 
         <section>
