--- a/layouts/knowledge-post.hbs
+++ b/layouts/knowledge-post.hbs
@@ -8,7 +8,7 @@
   <main id="main">
     <div class="container">
 
-      <article>
+      <article dir="auto">
         <div class="blogpost-header">
           <h1>{{title}}</h1>
           <span class="blogpost-meta">{{#if author}}{{site.by}} {{author}}, {{/if}}{{#if date}}<time datetime="{{ date }}">{{ strftime date }}</time>{{/if}}</span>
