--- a/layouts/blog-index.hbs
+++ b/layouts/blog-index.hbs
@@ -6,7 +6,7 @@
   {{> header }}
 
   <main id="main">
-    <div class="container">
+    <div class="container" dir="auto">
       <h2>News from {{ pagination.year }}</h2>
 
       <ul class="blog-index">
