--- a/layouts/blog-post.hbs
+++ b/layouts/blog-post.hbs
@@ -8,7 +8,7 @@
   <main id="main">
     <div class="container">
 
-      <article>
+      <article dir="auto">
         <div class="blogpost-header">
           <h1>{{title}}</h1>
           <span class="blogpost-meta">{{#if author}}{{site.by}} {{author}}, {{/if}}<time datetime="{{ strftime date "%FT%T%z" }}">{{ strftime date }}</time></span>
