--- a/layouts/css/page-modules/_blog-index.scss
+++ b/layouts/css/page-modules/_blog-index.scss
@@ -18,3 +18,16 @@ nav.pagination {
     @include padded-link(2px);
   }
 }
+
+@media screen and (max-width: 700px) {
+  .blog-index,
+  [data-theme="dark"] .blog-index {
+    .summary {
+      margin-left: 0;
+      p {
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+  }
+}
