--- a/layouts/css/page-modules/_download.scss
+++ b/layouts/css/page-modules/_download.scss
@@ -270,6 +270,15 @@ td.download-table-last {
   }
 }
 
+@media screen and (max-width: 700px) {
+  .download-matrix {
+    display: revert;
+  }
+
+  .download-matrix ~ section ul {
+    padding: 0 20px;
+  }
+}
 
 @media (max-width: 320px) {
   .download-hero {
