Revert "🇺🇦 Support Ukraine (#4446)" (#4447)
This reverts commit 2dab06de20bf2e1a6b4a503aec55a8fecd9d3920.

Co-authored-by: Rich Trott <rtrott@gmail.com>

--- a/layouts/index.hbs
+++ b/layouts/index.hbs
@@ -12,15 +12,9 @@
 
         {{{ contents }}}
 
-        {{#if site.banners.saveukraine.visible}}
-          <div class="home-banner">
-            <a tabindex="0" role="button" aria-pressed="false" class="home-banner-button" href="{{ site.banners.saveukraine.link }}">{{ site.banners.saveukraine.text }}</a>
-          </div>
-        {{/if}}
-
         {{#if site.banners.blacklivesmatter.visible}}
-          <div class="home-banner">
-            <a tabindex="0" role="button" aria-pressed="false" class="home-banner-button" href="{{ site.banners.blacklivesmatter.link }}">{{ site.banners.blacklivesmatter.text }}</a>
+          <div class="home-blacklivesmatterblock">
+            <a tabindex="0" role="button" aria-pressed="false" class="home-blacklivesmatterbutton" href="{{ site.banners.blacklivesmatter.link }}">{{ site.banners.blacklivesmatter.text }}</a>
           </div>
         {{/if}}
 
